--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body {
 
 body {
 	background-color: #f5f5f5;
+	padding: 0 10px 0 10px;
 }
 
 a {
@@ -197,7 +198,7 @@ section.sellout {
 	text-align: center;
 	font-size: 15px;
 	font-family: 'Roboto', sans-serif;
-	margin: 100px auto 150px auto;
+	margin: 100px auto 100px auto;
 	max-width: 700px;
 }
 
