+fig -puck (rip)

--- a/index.pug
+++ b/index.pug
@@ -28,6 +28,21 @@ html
 		section.divider
 		section.projects#projects
 			.project
+				a(href='https://fig.nikerino.com')
+					.title fig.js
+				.content
+					a(href='https://fig.nikerino.com')
+						img(src='img/preview/fig.png')
+					.desc Experimental front-end UI framework.
+					.links
+						a.link.main(href='https://fig.nikerino.com')
+							span.fa.fa-globe
+						a.link(href='https://github.com/nikersify/fig')
+							span.devicons.devicons-github_badge
+						a.link(href='https://npmjs.com/package/figjs')
+							span.devicons.devicons-npm
+
+			.project
 				a(href='https://splush.nikerino.com')
 					.title splush!
 				.content
@@ -98,20 +113,6 @@ html
 							span.devicons.devicons-npm
 				.tags
 					.tag node.js
-
-			.project
-				a(href='https://github.com/nikersify/puck')
-					.title puck
-				.content
-					a(href='https://github.com/nikersify/puck')
-						img(src='img/preview/puck.png')
-					.desc Code compiling bot for Discord, might still work.
-					.links
-						a.link.main(href='https://github.com/nikersify/puck')
-							span.devicons.devicons-github_badge
-				.tags
-					.tag node.js
-					.tag coffeescript
 
 		section.sellout
 			a(href='mailto:nikersify@nikerino.com')
