--- a/index.pug
+++ b/index.pug
@@ -1,13 +1,32 @@
+doctype html
 html
 	head
 		title nikerino.com
+
+		meta(charset='utf-8')
 		meta(name='viewport' content='initial-scale=1, maximum-scale=1')
+		meta(name='description' content='nikersify\'s personal portfolio')
+
+		meta(property='og:type' content='website')
+		meta(property='og:url' content='https://nikerino.com')
+		meta(property='og:site_name' content='nikerino')
+		meta(property='og:image' content='img/avatar.png')
+		meta(property='og:image:height' content='128')
+		meta(property='og:image:width' content='128')
+		meta(property='og:locale' content='en-US')
+		meta(property='og:title' content='nikersify\'s personal portfolio')
+		meta(property='og:description', content=
+			'personal projects, personal links, personal personals')
+
+		meta(property='twitter:image' content='img/avatar.png')
+		meta(property='twitter:image:height' content='128')
+		meta(property='twitter:image:width' content='128')
+		meta(property='twitter:card' content='summary')
+
 		link(rel='stylesheet' href='reset.css')
 		link(rel='stylesheet' href='style.css')
-		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/\
-			font-awesome/4.7.0/css/font-awesome.min.css')
-		link(rel='stylesheet' href='https://cdn.jsdelivr.net/devicons/1.8.0/\
-			css/devicons.min.css')
+		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+		link(rel='stylesheet' href='https://cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css')
 		link(rel='icon' type='image/png' href='img/favicon.png')
 	body
 		section.lead#lead
