--- a/index.pug
+++ b/index.pug
@@ -10,7 +10,7 @@ html
 		meta(property='og:type' content='website')
 		meta(property='og:url' content='https://nikerino.com')
 		meta(property='og:site_name' content='nikerino')
-		meta(property='og:image' content='img/avatar.png')
+		meta(property='og:image' content='https://nikerino.com/img/avatar.png')
 		meta(property='og:image:height' content='128')
 		meta(property='og:image:width' content='128')
 		meta(property='og:locale' content='en-US')
@@ -18,7 +18,7 @@ html
 		meta(property='og:description', content=
 			'personal projects, personal links, personal personals')
 
-		meta(property='twitter:image' content='img/avatar.png')
+		meta(property='twitter:image' content='https://nikerino.com/img/avatar.png')
 		meta(property='twitter:image:height' content='128')
 		meta(property='twitter:image:width' content='128')
 		meta(property='twitter:card' content='summary')
